<resources>
    <string-array name="settings_order_by_labels">
        <item>@string/settings_order_by_newest_news_label</item>
        <item>@string/settings_order_by_oldest_news_label</item>
        <item>@string/settings_order_by_relevance_news_label</item>
    </string-array>

    <string-array name="settings_order_by_values">
        <item>@string/settings_order_by_newest_news_value</item>
        <item>@string/settings_order_by_oldest_news_value</item>
        <item>@string/settings_order_by_relevance_news_value</item>
    </string-array>

    <string-array name="settings_section_labels">
        <item>@string/settings_section_all_news_label</item>
        <item>@string/settings_section_australia_news_news_label</item>
        <item>@string/settings_section_media_network_news_label</item>
        <item>@string/settings_section_Business_news_label</item>
        <item>@string/settings_section_society_label</item>
        <item>@string/settings_section_Film_news_label</item>
        <item>@string/settings_section_world_news_label</item>
    </string-array>

    <string-array name="settings_section_values">
        <item>@string/settings_section_all_news_value</item>
        <item>@string/settings_section_australia_news_news_value</item>
        <item>@string/settings_section_media_network_news_value</item>
        <item>@string/settings_section_Business_value</item>
        <item>@string/settings_section_society_value</item>
        <item>@string/settings_section_Film_value</item>
        <item>@string/settings_section_world_news_value</item>
    </string-array>

    <string name="app_name">News App</string>
    <string name="internetErrorMsg">Sorry, Connection lost</string>
    <string name="contentErrorMsg">No News to show,come later!</string>
    <string name="appName">Feed</string>
    <string name="author">Article by-:</string>
    <string name="type">Type-:</string>
    <string name="publishing_details">Published on-:</string>
    <string name="btn_text">LETS Go</string>
    <string name="contentDesc">Logo</string>
    <string name="settings_menu_item">Settings</string>


    <string name="settings_title">News Settings</string>
    <string name="settings_min_news_label">Minimum News</string>
    <string name="settings_min_news_key" translatable="false">min_news</string>
    <string name="settings_min_news_default" translatable="false">0</string>

    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_newest_news_value</string>

    <string name="settings_order_by_newest_news_label">Newest</string>
    <string name="settings_order_by_newest_news_value" translatable="false">newest</string>

    <string name="settings_order_by_oldest_news_label">Oldest</string>
    <string name="settings_order_by_oldest_news_value" translatable="false">oldest</string>

    <string name="settings_order_by_relevance_news_label">Relevance</string>
    <string name="settings_order_by_relevance_news_value" translatable="false">relevance</string>

    <string name="settings_section_label">Section</string>
    <string name="settings_section_news_key" translatable="false">section</string>
    <string name="settings_section_news_default" translatable="false">@string/settings_section_all_news_value</string>

    <string name="settings_section_all_news_label">All</string>
    <string name="settings_section_all_news_value" translatable="false">all</string>

    <string name="settings_section_australia_news_news_label">Australia news</string>
    <string name="settings_section_australia_news_news_value" translatable="false">australia-news</string>

    <string name="settings_section_world_news_label">World news</string>
    <string name="settings_section_world_news_value" translatable="false">world</string>

    <string name="settings_section_media_network_news_label">Media Network</string>
    <string name="settings_section_media_network_news_value" translatable="false">media-network</string>

    <string name="settings_section_society_label">Society</string>
    <string name="settings_section_society_value" translatable="false">society</string>

    <string name="settings_section_Business_news_label">Business</string>
    <string name="settings_section_Business_value" translatable="false">business</string>

    <string name="settings_section_Film_news_label">Film</string>
    <string name="settings_section_Film_value" translatable="false">film</string>

    <string name="noAuthor">No Author ..</string>
    <string name="apply">Apply</string>
</resources>


