<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:orientation="vertical"
    android:padding="@dimen/layout_padding">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        card_view:cardCornerRadius="@dimen/cardCornerRadius"
        card_view:cardElevation="@dimen/cardElevation"
        card_view:cardBackgroundColor="@color/card_background"
        card_view:cardMaxElevation="@dimen/cardMaxElevation"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="@dimen/title_layout_margin"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:textSize="@dimen/news_text_size"
                tools:text="Title" />
            <LinearLayout
                android:layout_margin="@dimen/details_layout_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/details_text_size"
                    android:gravity="bottom"
                    android:textColor="@color/colorAccent"
                    android:textStyle="normal"
                    android:text="@string/author"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/author_text_view"
                android:layout_marginLeft="@dimen/details_margin_left_start"
                android:layout_marginStart="@dimen/details_margin_left_start"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/details_text_size"
                tools:text="Author" />
            </LinearLayout>

        <LinearLayout
            android:layout_margin="@dimen/details_layout_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:textSize="@dimen/details_text_size"
                android:textColor="@color/colorAccent"
                android:textStyle="normal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/details_margin_left_start"
                android:layout_marginStart="@dimen/details_margin_left_start"
                android:id="@+id/category_text_view"
                android:textSize="@dimen/details_text_size"
                tools:text="Category" />
        </LinearLayout>
        <LinearLayout
            android:layout_margin="@dimen/details_layout_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/publishing_details"
                android:textSize="@dimen/details_text_size"
                android:textColor="@color/colorAccent"
                android:textStyle="normal"/>

            <TextView
                android:layout_marginLeft="@dimen/details_margin_left_start"
                android:layout_marginStart="@dimen/details_margin_left_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/details_text_size"
                android:id="@+id/date_text_view"
                tools:text="Date" />
        </LinearLayout>
        </LinearLayout>


    </android.support.v7.widget.CardView>
</RelativeLayout>